<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigCuentaActivity">
    <include
        android:id="@+id/miActionBar"
        layout="@layout/actionbar"></include>
    <TextView
        android:id="@+id/tv_tituloapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/miActionBar"
        android:textSize="@dimen/cvtexto"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tituloapp"
        android:id="@+id/til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tilCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tilCuenta"
            android:padding="@dimen/paddingContacto"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:text="@string/btnGuardarCuenta" />




</RelativeLayout>