<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactoActivity">
    <include
        android:id="@+id/miActionBar"
        layout="@layout/actionbar"></include>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilNombre"
        android:padding="@dimen/paddingContacto"
        android:layout_below="@id/miActionBar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tietNombre" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilCorreo"
        android:padding="@dimen/paddingContacto"
        android:layout_below="@id/tilNombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tietCorreo" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilMensaje"
        android:padding="@dimen/paddingContacto"
        android:layout_below="@id/tilCorreo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tietMensaje" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tilMensaje"
        android:text="@string/btnEnviar" />

</RelativeLayout>